--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,7 +244,7 @@
   padding: 5%;
   border-radius: 3em;
   width: 50%;
-  justify-self: center;
+    justify-self: center;
 }
 
 .climate-change {
@@ -253,15 +253,14 @@
   background-size: 550% auto;
   background-position-x: 45%;
   background-position-y: 75%;
-  display: grid;
-  grid-template-rows: 2fr 3fr;
 }
-
+.climate-change-head{
+  margin: 8.5%;
+}
 .climate-change-head-cots {
   font-family: "FloodFont";
   color: #ffffff;
   font-size: 2.5em;
-  margin: 10% 0% 0% 10%;
 }
 
 .climate-change-head-btn {
@@ -271,14 +270,12 @@
   text-align: center;
   font-size: 1.1em;
   cursor: pointer;
-  margin-left: 10%;
   border-radius: 3em;
   padding: 2% 2% 2% 2%;
 }
 
 .climate-change-lower {
-  width: 80%;
-  margin: 0% 10% 0% 10%;
+  margin: 8.5%;
   position: relative;
 }
 
